# csv2latex

./: .gitignore  CLAUDE.md  LICENSE  csv2latex.py  default_config.yaml  example_table_config.yaml  main.py  pyproject.toml  readme.md  table_config.yaml  test_config.yaml  test_data.csv  test_pipeline.py
src/csv2latex/: __converters.py  app.py  converters.py  main_window.py
src/csv2latex/config/: __init__.py  manager.py
src/csv2latex/dialogs/: __init__.py  filter_dialog.py  sort_dialog.py
src/csv2latex/latex/: __init__.py  formatter.py
src/csv2latex/utils/: data_processing.py
